@startuml DiagramaClases

Personaje "1" *--- "1" Inventario : inventario >
Guerrero "1" o--- "0..*" Fisica: habilidades >
Mago "1" o--- "0..*" Magia: habilidades >
Asesino "1" o--- "0..*" Subterfujio: habilidades >
Inventario "1" o--- "0..huecos" Objeto: objetos >

Personaje <|-- Guerrero
Personaje <|-- Mago
Personaje <|-- Asesino

Habilidad <|-- Fisica
Habilidad <|-- Subterfujio
Habilidad <|-- Magia

Objeto <|-- Arma
Objeto <|-- Equipamiento
Objeto <|-- Pocion
Objeto <|-- Pocion_mana
Objeto <|-- Pocion_vida

class Personaje {
    String nombre
    Number nivel
    Number porcentaje_de_nivel
    Number vida_restante
    Number vida_total
    Number elo
    __init__(self, nombre, vida_total, vida_restante)
}
class Guerrero{
    Number furia_total
    Number furia_restante
    __init__(self, nombre)
    atacar(personaje_objetivo, habilidad)
    modificar_vida(cantidad)
    modificar_vida_total(cantidad)
    modificar_furia(cantidad)
    modificar_furia_total(cantidad)
    add_habilidad(habilidad)
}
class Mago{
    Number mana_total
    Number mana_restante
    __init__(self, nombre)
    atacar(personaje_objetivo, habilidad)
    modificar_vida(cantidad)
    modificar_vida_total(cantidad)
    modificar_mana(cantidad)
    modificar_mana_total(cantidad)
    add_habilidad(habilidad)
}
class Asesino{
    Number energia_total
    Number energia_restante
    __init__(self, nombre)
    atacar(personaje_objetivo, habilidad)
    modificar_vida(cantidad)
    modificar_vida_total(cantidad)
    modificar_energia(cantidad)
    modificar_energia_total(cantidad)
    add_habilidad(habilidad)
}
class Objeto{
    String nombre
    Number precio
    Number peso
    __init__(self, nombre, precio, peso)
}
class Inventario{
    Number huecos
    Number peso_maximo
    __init__(self, huecos, peso_maximo)
    introducir_objeto(objeto)
}
class Equipamiento{
    Number armadura
    __init_(self, nombre, precio, peso, armadura)
}
class Arma{
    Number danyo
    __init_(self, nombre, precio, peso, danyo)
}
class Pocion_mana{
    Number mana
}
class Pocion_vida{
    Number vida
}
class Habilidad{
    String nombre
    String danyo
    __init__(self, nombre, danyo)
}
class Magia{
    Number coste_mana
    __init__(self, nombre, danyo, coste_mana)
}
class Fisica{
    Number coste_furia
    __init__(self, nombre, danyo, coste_furia)
}
class Subterfujio{
    Number coste_energia
    __init__(self, nombre, danyo, coste_energia)
}
@enduml